--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy-github": "ng build --prod --base-href \"https://danipisca07.github.io/danipisca07.github.io/"
+    "deploy-github": "ng build --prod --base-href \"danipisca07.github.io\" && angular-cli-ghpages -d dist/danipisca07-website --branch=master"
   },
   "private": true,
   "dependencies": {
