--- a/angular.json
+++ b/angular.json
@@ -124,6 +124,10 @@
               "devServerTarget": "danipisca07-website:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
