--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^8.2.14",
     "angular-cli-ghpages": "^0.6.2",
     "hammerjs": "^2.0.8",
+    "intersection-observer": "^0.7.0",
+    "ng-in-viewport": "^6.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
