--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "angular-cli-ghpages": "^0.6.2",
+    "angular-fittext": "^2.1.1",
     "hammerjs": "^2.0.8",
     "intersection-observer": "^0.7.0",
     "ng-in-viewport": "^6.0.3",
