--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng build --prod",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy-github": "ng build --prod && angular-cli-ghpages -d dist/danipisca07-website --branch=master --no-silent --cname=danielepiscaglia.me",
+    "deploy-github-temp": "ng build --prod && angular-cli-ghpages -d dist/danipisca07-website --branch=master --no-silent"
   },
   "private": true,
   "dependencies": {
