--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-fittext": "^2.0.5",
     "hammerjs": "^2.0.8",
     "intersection-observer": "^0.12.2",
     "ng-in-viewport": "^16.0.0",
