--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "angular-fittext": "^2.0.5",
     "hammerjs": "^2.0.8",
     "intersection-observer": "^0.12.2",
     "ng-in-viewport": "^16.0.0",
+    "ng2-fittext": "^1.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
